[gd_scene load_steps=6 format=2]

[ext_resource path="res://Prefabs/Characters/AbstractHuman.tscn" type="PackedScene" id=1]
[ext_resource path="res://Prefabs/Characters/HumanGun.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/Gun.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/HumanLegsEvil.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Shoot"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 6, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Legs:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_physics_process"
}, {
"args": [ true ],
"method": "set_physics_process"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "summon_bullet"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:is_attacking")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="HumanGun" instance=ExtResource( 1 )]
script = ExtResource( 2 )
Drop = ExtResource( 3 )
body_type = 4
hurt_by = "Hurt"
is_attacking = true

[node name="Body" parent="." index="1"]
frame = 6

[node name="Legs" parent="." index="2"]
texture = ExtResource( 4 )

[node name="AnimationPlayer" parent="." index="5"]
anims/Shoot = SubResource( 1 )

[node name="Range" type="Area2D" parent="." index="6"]
collision_layer = 0
collision_mask = 128

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Range" index="0"]
position = Vector2( 17, -24 )
polygon = PoolVector2Array( 0, 0, 125, -228, 220, -147 )

[node name="AttackCooldown" type="Timer" parent="." index="7"]
wait_time = 2.5
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
